[package]
name = "google_apis"
version = "0.1.0"
authors = ["Koichi Tada <kou26haru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version="0.3.0", features = ["tls"]}
bytes        = "0.5.6"
prost        = "0.6.1"
prost-derive = "0.6.1"
prost-types = "0.6"

[build-dependencies]
tonic-build = { version = "0.3.0", features = ["prost"] }
